# ai-bot-

./: LICENSE  vercel.json
Tg-ai-bot-rust/: Cargo.toml  README.md  vercel.json
Tg-ai-bot-rust/.github/workflows/: ci.yml
Tg-ai-bot-rust/examples/: env.example
Tg-ai-bot-rust/sql/: schema.sql
Tg-ai-bot-rust/src/: config.rs  db.rs  handlers.rs  main.rs
Tg-ai-bot-rust/src/adapters/: image.rs  llm_pool.rs  mod.rs  search.rs
